// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterInput /> matches snapshot with no filters 1`] = `
"
<form
  class="flex-grow-1 flex-shrink-1 mr-auto"
  style="min-width: 0px;"
>
  <div class="input-group w-100 me-2 components-filterinput-outer bg-focused">
    <div class="form-control components-filterinput border-0 rounded-0 bg-inherit">
      <div class="autosuggest d-inline-block mw-100">
        <span class="input-group-text text-muted d-inline-block me-2 border-0 bg-inherit px-1">
          <svg
            aria-hidden="true"
            focusable="false"
            data-prefix="fas"
            data-icon="magnifying-glass"
            class="svg-inline--fa fa-magnifying-glass "
            role="img"
            xmlns="http://www.w3.org/2000/svg"
            viewbox="0 0 512 512"
          >
            <path
              fill="currentColor"
              d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
            >
            </path>
          </svg>
        </span>
        <input
          class="components-filterinput-wrapper text-white mw-100"
          size="1"
          aria-activedescendant
          aria-autocomplete="list"
          aria-controls="downshift-0-menu"
          aria-expanded="false"
          aria-labelledby="downshift-0-label"
          autocomplete="off"
          id="downshift-0-input"
          role="combobox"
          value
        >
      </div>
      <span
        class="dropdown"
        id="downshift-0-menu"
        role="listbox"
        aria-labelledby="downshift-0-label"
      >
      </span>
    </div>
    <span class="input-group-text border-0 rounded-0 bg-inherit px-0">
      <button
        class="btn border-0 rounded-0 bg-inherit cursor-pointer components-navbar-history px-2 py-0 components-navbar-icon"
        type="button"
        data-toggle="dropdown"
        aria-haspopup="true"
        aria-expanded="true"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          data-prefix="fas"
          data-icon="caret-down"
          class="svg-inline--fa fa-caret-down "
          role="img"
          xmlns="http://www.w3.org/2000/svg"
          viewbox="0 0 320 512"
        >
          <path
            fill="currentColor"
            d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z"
          >
          </path>
        </svg>
      </button>
    </span>
  </div>
</form>
"
`;

exports[`<FilterInput /> matches snapshot with some filters 1`] = `
"
<form
  class="flex-grow-1 flex-shrink-1 mr-auto"
  style="min-width: 0px;"
>
  <div class="input-group w-100 me-2 components-filterinput-outer bg-focused">
    <div class="form-control components-filterinput border-0 rounded-0 bg-inherit">
      <button
        type="button"
        class="btn-secondary btn-sm components-filteredinputlabel components-label btn d-inline-flex flex-row align-items-center"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          data-prefix="fas"
          data-icon="spinner"
          class="svg-inline--fa fa-spinner fa-spin "
          role="img"
          xmlns="http://www.w3.org/2000/svg"
          viewbox="0 0 512 512"
        >
          <path
            fill="currentColor"
            d="M304 48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm0 416a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM48 304a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm464-48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM142.9 437A48 48 0 1 0 75 369.1 48 48 0 1 0 142.9 437zm0-294.2A48 48 0 1 0 75 75a48 48 0 1 0 67.9 67.9zM369.1 437A48 48 0 1 0 437 369.1 48 48 0 1 0 369.1 437z"
          >
          </path>
        </svg>
        <div class="components-filteredinputlabel-text flex-grow-1 flex-shrink-1 ms-1 tooltip-trigger">
          <span
            tabindex="0"
            class="cursor-text px-1"
          >
            foo=bar
          </span>
        </div>
        <svg
          aria-hidden="true"
          focusable="false"
          data-prefix="fas"
          data-icon="xmark"
          class="svg-inline--fa fa-xmark cursor-pointer text-reset ms-1"
          role="img"
          xmlns="http://www.w3.org/2000/svg"
          viewbox="0 0 384 512"
        >
          <path
            fill="currentColor"
            d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
          >
          </path>
        </svg>
      </button>
      <button
        type="button"
        class="btn-secondary btn-sm components-filteredinputlabel components-label btn d-inline-flex flex-row align-items-center"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          data-prefix="fas"
          data-icon="spinner"
          class="svg-inline--fa fa-spinner fa-spin "
          role="img"
          xmlns="http://www.w3.org/2000/svg"
          viewbox="0 0 512 512"
        >
          <path
            fill="currentColor"
            d="M304 48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm0 416a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM48 304a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm464-48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM142.9 437A48 48 0 1 0 75 369.1 48 48 0 1 0 142.9 437zm0-294.2A48 48 0 1 0 75 75a48 48 0 1 0 67.9 67.9zM369.1 437A48 48 0 1 0 437 369.1 48 48 0 1 0 369.1 437z"
          >
          </path>
        </svg>
        <div class="components-filteredinputlabel-text flex-grow-1 flex-shrink-1 ms-1 tooltip-trigger">
          <span
            tabindex="0"
            class="cursor-text px-1"
          >
            baz!=bar
          </span>
        </div>
        <svg
          aria-hidden="true"
          focusable="false"
          data-prefix="fas"
          data-icon="xmark"
          class="svg-inline--fa fa-xmark cursor-pointer text-reset ms-1"
          role="img"
          xmlns="http://www.w3.org/2000/svg"
          viewbox="0 0 384 512"
        >
          <path
            fill="currentColor"
            d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
          >
          </path>
        </svg>
      </button>
      <div class="autosuggest d-inline-block mw-100">
        <input
          class="components-filterinput-wrapper text-white mw-100"
          size="1"
          aria-activedescendant
          aria-autocomplete="list"
          aria-controls="downshift-2-menu"
          aria-expanded="false"
          aria-labelledby="downshift-2-label"
          autocomplete="off"
          id="downshift-2-input"
          role="combobox"
          value
        >
      </div>
      <span
        class="dropdown"
        id="downshift-2-menu"
        role="listbox"
        aria-labelledby="downshift-2-label"
      >
      </span>
    </div>
    <span class="input-group-text border-0 rounded-0 bg-inherit px-0">
      <button
        class="btn border-0 rounded-0 bg-inherit cursor-pointer components-navbar-history px-2 py-0 components-navbar-icon"
        type="button"
        data-toggle="dropdown"
        aria-haspopup="true"
        aria-expanded="true"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          data-prefix="fas"
          data-icon="caret-down"
          class="svg-inline--fa fa-caret-down "
          role="img"
          xmlns="http://www.w3.org/2000/svg"
          viewbox="0 0 320 512"
        >
          <path
            fill="currentColor"
            d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z"
          >
          </path>
        </svg>
      </button>
    </span>
  </div>
</form>
"
`;
